# numdifftools

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .landscape.yml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  appveyor.yml  build_package.py  cliff.toml  epydoc_numdifftools.prj  gen_numdiff_doc.py  pdm.lock314  pyproject.toml  requirements.readthedocs.txt  requirements.tests.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  sonar-project_readme.txt  test_all.py  tox.ini
.github/workflows/: release.yml  test.yml
conda_recipe/: bld.bat  meta.yaml  run_test.py
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/api/: modules.rst  numdifftools.rst  numdifftools.tests.rst
docs/appendix/: acknowledgement.rst  bibliography.rst  changelog.rst  index.rst  license.rst  refs1.bib  zreferences.rst
docs/how-to/: contributing.rst  create_virtual_env_with_conda.rst  index.rst
docs/intro/: index.rst
docs/reference/: index.rst  numdifftools.rst  numdifftools.tests.rst  numdifftools_summary.rst
docs/src/: DERIVEST.tex  ad.rst  derivest.rst  intro.rst  overview.rst  theory.rst
docs/src/algorithmic/: main.rst
docs/src/numerical/: derivest.rst  main.rst
docs/topics/: finite_difference_derivatives.rst  index.rst
docs/tutorials/: getting_started.rst  index.rst  install.rst  whatsnext.rst
examples/: fun.py
numdifftools/: __init__.py  _version.py  core.py  example_functions.py  extrapolation.py  fornberg.py  info.py  license.py  limits.py  multicomplex.py  nd_algopy.py  nd_cstep.py  nd_scientific.py  nd_scipy.py  nd_statsmodels.py  profile_numdifftools.py  profiletools.py  run_benchmark.py  set_matplotlib_gtkagg_backend.py  step_generators.py  test_functions.py  testing.py
numdifftools/html/: api-objects.txt  class-tree.html  help.html  index.html  module-tree.html  numdifftools-module.html  numdifftools-pysrc.html  numdifftools.core.Derivative-class.html  numdifftools.core.Gradient-class.html  numdifftools.core.Hessdiag-class.html  numdifftools.core.Hessian-class.html  numdifftools.core.Jacobian-class.html  numdifftools.core._Derivative-class.html  numdifftools.core._PartialDerivative-class.html  numdifftools.info-module.html  numdifftools.info-pysrc.html  numdifftools.nd_algopy-module.html  numdifftools.nd_algopy-pysrc.html  numdifftools.nd_algopy.Derivative-class.html  numdifftools.nd_algopy.Gradient-class.html  numdifftools.nd_algopy.Hessian-class.html  numdifftools.nd_algopy.Jacobian-class.html  numdifftools.nd_algopy._Common-class.html  numdifftools.nd_scientific-module.html  numdifftools.nd_scientific.Derivative-class.html  numdifftools.nd_scientific.Gradient-class.html  numdifftools.nd_scientific.Hessian-class.html  numdifftools.nd_scientific.Jacobian-class.html  numdifftools.nd_scientific._Common-class.html  redirect.html  toc-numdifftools-module.html  toc-numdifftools.core-module.html  toc-numdifftools.license-module.html  toc-numdifftools.nd_algopy-module.html  toc-numdifftools.nd_scientific-module.html
numdifftools/speed_comparison/: prettyplotting.py  run_benchmarks.py  use_adolc.py  use_algopy.py  use_funcdesigner.py  use_numdifftools.py  use_scientific.py  use_theano.py  use_uncertainties.py
numdifftools/test/: test_hessian.py  testnumdifftools.py
numdifftools/tests/: conftest.py  hamiltonian.py  test_example_functions.py  test_extrapolation.py  test_fornberg.py  test_hessian.py  test_limits.py  test_multicomplex.py  test_nd_algopy.py  test_nd_cstep.py  test_numdifftools.py  test_profiletools.py  test_step_generators.py
src/numdifftools/: 2.session  __init__.py  _find_default_scale.py  core.py  example_functions.py  extrapolation.py  finite_difference.py  fornberg.py  info.py  license.py  limits.py  multicomplex.py  nd_algopy.py  nd_scipy.py  nd_statsmodels.py  profile_numdifftools.py  profiletools.py  run_benchmark.py  step_generators.py  testing.py
src/numdifftools/numdifftools/: _find_default_scale.py  nd_statsmodels.py  numdifftools.prj  profiletools.py  step_generators.py
src/numdifftools/tests/: conftest.py  hamiltonian.py  test_example_functions.py  test_extrapolation.py  test_fornberg.py  test_limits.py  test_multicomplex.py  test_nd_algopy.py  test_nd_scipy.py  test_nd_statsmodels.py  test_numdifftools.py  test_profiletools.py  test_scripts.py  test_step_generators.py  test_wprofiletools.py
tests/: conftest.py  test_multicomplex.py  test_nd_algopy.py
trunk/: MANIFEST  MANIFEST.in  epydoc_numdifftools.prj  gen_numdiff_doc.py  setup.py  test_all.py
trunk/numdifftools/: __init__.py  _algopy.py  _scientific.py  core.py  info.py  nd_algopy.py  nd_scientific.py  numdifftools.prj  setup.py
trunk/numdifftools/html/: identifier-index.html  index.html  numdifftools.core-module.html  numdifftools.core-pysrc.html  numdifftools.core.Derivative-class.html  numdifftools.core.Gradient-class.html  numdifftools.core.Hessdiag-class.html  numdifftools.core.Hessian-class.html  numdifftools.core.Jacobian-class.html  numdifftools.core._Derivative-class.html  numdifftools.core._PartialDerivative-class.html  numdifftools.license-module.html  numdifftools.license-pysrc.html  numdifftools.nd_algopy.Derivative-class.html  numdifftools.nd_algopy.Gradient-class.html  numdifftools.nd_algopy.Hessian-class.html  numdifftools.nd_algopy.Jacobian-class.html  numdifftools.nd_algopy._Common-class.html  numdifftools.nd_scientific-pysrc.html  numdifftools.nd_scientific.Derivative-class.html  numdifftools.nd_scientific.Gradient-class.html  numdifftools.nd_scientific.Hessian-class.html  numdifftools.nd_scientific.Jacobian-class.html  numdifftools.nd_scientific._Common-class.html  toc-everything.html  toc-numdifftools.info-module.html  toc.html
trunk/numdifftools/ndboum.prj/: 2.session  generation_settings  ndboum.prj.prj  stereotypes
trunk/numdifftools/speed_comparison/: benchmark1.py  prettyplotting.py  run_benchmarks.py  use_adolc.py  use_algopy.py  use_funcdesigner.py  use_numdifftools.py
(+49 files in other folders)
