[metadata]
name = numdifftools
summary = Solves automatic numerical differentiation problems in one or more variables.
author = pbrod
author_email = per.andreas.brodtkorb@gmail.com
license = new BSD
home-page = https://github.com/pbrod/numdifftools
description-file = README.rst

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier = Development Status :: 4 - Beta
             Programming Language :: Python
             Programming Language :: Python :: 2.7
             Programming Language :: Python :: 3
             Programming Language :: Python :: 3.3
             Programming Language :: Python :: 3.4
             Programming Language :: Python :: 3.5
             Environment :: Console
             Intended Audience :: Education
             Intended Audience :: Science/Research
             License :: OSI Approved :: BSD License
             Operating System :: OS Independent
             Operating System :: POSIX :: Linux
             Operating System :: Unix
             Operating System :: MacOS
             Operating System :: Microsoft :: Windows
             Topic :: Scientific/Engineering :: Mathematics

[entry_points]
# Add here console scripts like:
# console_scripts =
#       run_my_project = my_project.cli:run
# as well as other entry_points.

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
     numdifftools
data_files =
     share/numdifftools/docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = numdifftools
          numdifftools/tests

[pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov numdifftools --cov-report term-missing
    --verbose
    --doctest_modules
    --pep8

norecursedirs =
    .*
    _build
    docs
    tmp*

pep8ignore =
    tests/*.py ALL
    info.py ALL

[aliases]
docs = build_sphinx
# test = pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


[build_sphinx]
# Options for Sphinx build
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI serer and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
format = bdist_wheel